# Mycelium

./: .gitignore  CLAUDE.md  Cargo.toml
src/: lib.rs  main.rs
src/api/: chat.rs  health.rs  mod.rs  models.rs  router.rs
src/config/: settings.rs
src/inference/: backend.rs  local.rs  mod.rs
src/model/: engine.rs  loader.rs  mod.rs  tokenizer.rs
src/sse/: openai.rs
tests/: backend_test.rs  chat_test.rs  loader_test.rs  models_test.rs  tokenizer_test.rs
tests/api/: chat_test.rs  models_test.rs
tests/inference/: backend_test.rs
tests/integration/: end_to_end_test.rs
