[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"
description = "Distributed LLM inference in Rust"

[lib]
name = "mycelium"
path = "src/lib.rs"

[[bin]]
name = "mycelium"
path = "src/main.rs"

[dependencies]
# Inference
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }

# HTTP API
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.4"

# Tokenizer
tokenizers = "0.22"

# Model download
hf-hub = { version = "0.5", features = ["tokio"] }

# Async trait
async-trait = "0.1"

# Streams
futures-util = "0.3"

# UUIDs for completion IDs
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config paths (cross-platform)
dirs = "5"

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration/end_to_end_test.rs"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
